--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ htdocs/tmp/0gb1o1vpkaz.12fisw3t6h8iw.php
 htdocs/tmp/0gb1o1vpkaz.0b75vfz6zl3.php
 
 htdocs/tmp/0gb1o1vpkaz.0b75vfz6zl3.php
+
+htdocs/lib/CodeMirror/
